# SkillClaw

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.cursor/: mcp.json
.github/workflows/: scrape-skills.yml
scripts/: scrape_skills.py
skills_library/: example-skill.md  research-skill.md
